welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var taille : Int = len(nums)
  for (i <- 0 to taille-1) {
    if (nums(i)==lookingFor) {return i}
  }
  return  -1 }